--- a/js/views/layout.ejs
+++ b/js/views/layout.ejs
@@ -2,19 +2,24 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="style.css">
-    <title>Say</title>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
+
+        <title>Sagen</title>
 </head>
 
 <body>
-    <div>
-        <%- body %>
-    </div>
+        <div>
+                <%- body %>
+        </div>
 
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="MSG.js"></script>
+        <script src="/socket.io/socket.io.js"></script>
+        <script src="MSG.js"></script>
+        <script src="body.js"></script>
+        <script src="Hide.js"></script>
 </body>
+
 </html>
